<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="io.appwrite.almostnetflix.movie.MovieDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".movie.MovieFragment">

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:appwriteImage="@{viewModel.movie.thumbnailImageId}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="300dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:text="@{viewModel.movie.name}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/previewImage"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/yearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:text="@{viewModel.releaseYear}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_subheading"
                app:layout_constraintEnd_toStartOf="@id/ratingText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameText"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:text="@{viewModel.movie.ageRestriction.name()}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_subheading"
                app:layout_constraintEnd_toStartOf="@id/durationText"
                app:layout_constraintStart_toEndOf="@id/yearText"
                app:layout_constraintTop_toBottomOf="@id/nameText"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/durationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:text="@{viewModel.duration}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_subheading"
                app:layout_constraintStart_toEndOf="@id/ratingText"
                app:layout_constraintTop_toBottomOf="@id/nameText"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:text="@{viewModel.movie.description}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yearText"
                tools:text="@string/lorem" />

            <ToggleButton
                android:id="@+id/myListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@null"
                android:button="@drawable/check_state"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:onClick="@{() -> viewModel.toggleInWatchlist()}"
                android:textColor="@color/white"
                android:textOff="@string/myList"
                android:textOn="@string/myList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionText" />

            <TextView
                android:id="@+id/moreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_4"
                android:text="@string/more"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/myListButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similarMoviesRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/moreText"
                tools:itemCount="10"
                tools:listitem="@layout/item_content_cell" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>